# KN_41_VaYu-2

./: .coverage  Pipfile  README.md  app.py  lab.py  pyproject.toml  script.py
.github/workflows/: FirstJob.yml  SecondJob.yml  SimpleCondition.yml  python-app-1.yml  python-app.yml
KN_41_VaYu-2/: README.md
KN_41_VaYu-2/1_1_laba/: README.md  anime.py  my_app.ipynb  test_flask..py
KN_41_VaYu-2/2_laba/: README.md  app.py  my.py  test_figure.py
KN_41_VaYu-2/3_laba/: README.md
my_env/: pyvenv.cfg
my_env/Scripts/: activate  activate.bat
myproject/: pyproject.toml
