[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "VasylynaYurij",email = "yuvasylyna2021@itcollege.lviv.ua"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "myproject", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
